# landrop

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
crates/landrop-app/: Cargo.toml
crates/landrop-app/src/: lib.rs
crates/landrop-core/: Cargo.toml
crates/landrop-core/src/: connection.rs  lib.rs  service.rs
crates/landrop-discovery/: Cargo.toml
crates/landrop-discovery/src/: broadcast.rs  lib.rs  manager.rs  mdns.rs
crates/landrop-fs/: Cargo.toml
crates/landrop-fs/src/: lib.rs  manifest.rs  writer.rs
crates/landrop-platform/: Cargo.toml
crates/landrop-platform/src/: firewall.rs  lib.rs  permissions.rs
crates/landrop-protocol/: Cargo.toml
crates/landrop-protocol/src/: codec.rs  lib.rs  messages.rs
crates/landrop-security/: Cargo.toml
crates/landrop-security/src/: identity.rs  lib.rs  pairing.rs  trust_store.rs  verifier.rs
crates/landrop-state/: Cargo.toml
crates/landrop-state/src/: app.rs  lib.rs  peer.rs  transfer.rs
crates/landrop-testkit/: Cargo.toml
crates/landrop-testkit/src/: fixtures.rs  lib.rs  loopback.rs
crates/landrop-transfer/: Cargo.toml
crates/landrop-transfer/src/: engine.rs  ewma.rs  lib.rs  receiver.rs  sender.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  index.css
frontend/src/components/common/: GlassCard.svelte  ProgressBar.svelte  ToastStack.svelte
frontend/src/components/discovery/: DeviceCard.svelte  Radar.svelte
frontend/src/components/pairing/: PairingOutgoing.svelte  PinOverlay.svelte
frontend/src/components/transfer/: DragDropZone.svelte  HistoryPanel.svelte  TransferItem.svelte  TransferList.svelte
frontend/src/lib/: ipc.ts
frontend/src/lib/stores/: devices.svelte.ts  toast.svelte.ts  transfers.svelte.ts
frontend/src/lib/utils/: ewma.ts  format.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer-hooks.nsh
src-tauri/src/: commands.rs  dto.rs  events.rs  lib.rs  main.rs  state.rs
