[workspace]
members = [
    "crates/landrop-protocol",
    "crates/landrop-discovery",
    "crates/landrop-security",
    "crates/landrop-transfer",
    "crates/landrop-state",
    "crates/landrop-fs",
    "crates/landrop-platform",
    "crates/landrop-core",
    "crates/landrop-testkit",
    "src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["LANDrop"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mdns-sd = "0.11"
socket2 = { version = "0.5", features = ["all"] }
bytes = "1"
tokio-util = { version = "0.7", features = ["codec"] }
blake3 = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
sha2 = "0.10"
walkdir = "2"
directories = "5"
rand = "0.8"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1"
futures = "0.3"
parking_lot = "0.12"
once_cell = "1"
hex = "0.4"
hostname = "0.4"
tempfile = "3"
