[package]
name = "landrop-app"
version.workspace = true
edition.workspace = true

[lib]
name = "landrop_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
landrop-core = { path = "../landrop-core" }
landrop-state = { path = "../landrop-state" }
landrop-protocol = { path = "../landrop-protocol" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }
