[package]
name = "landrop-protocol"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
rmp-serde = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
