[package]
name = "landrop-security"
version.workspace = true
edition.workspace = true

[dependencies]
landrop-protocol = { path = "../landrop-protocol" }
rcgen = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
directories = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
